# KPSolver

./: CMakeLists.txt  Doxyfile  INSTALLATION  INSTALLATION.md  KP.cpp  KP.h  LICENSE  License.txt  Lump.cpp  Lump.h  README.md  Soliton.cpp  Soliton.h  csv.cpp  csv.h  global.h  main.cpp
